overlays/uat/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fayaaz-deployment  # Match the base deployment name here
  labels:
    app: uat-fayaaz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uat-fayaaz
  template:
    metadata:
      labels:
        app: uat-fayaaz
    spec:
      serviceAccountName: uat-fayaaz-app-sa  # Use uat-specific ServiceAccount
      containers:
        - name: fayaaz-container
