overlays/uat/uat-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uat-fayaaz-deployment
spec:
  template:
    metadata:
      labels:
        app: uat-fayaaz
    spec:
      serviceAccountName: uat-fayaaz-app-sa  # Use dev-specific ServiceAccount
      containers:
        - name: uat-fayaaz
          image: nginx:latest
