overlays/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fayaaz-service-uat
  labels:
    app: uat-fayaaz
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: uat-fayaaz
