overlays/uat/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fayaaz-route
spec:
  to:
    kind: Service
    name: fayaaz-service-uat
  port:
    targetPort: 80
  host: uat-fayaaz.apps.ocp.sfrsm.local
  tls:
    termination: edge
